# aoc-25

./: Cargo.toml  rust-project.json
day01/: main  main.rs
day02/: main  main.rs
day03/: main.rs
day04/: main.rs
day05/: main.rs
day06/: main.rs
day07/: main.rs
day10/: main.rs
day11/: main.rs
