[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"

[[bin]]
name = "day01"
path = "day01/main.rs"

[[bin]]
name = "day02"
path = "day02/main.rs"

[[bin]]
name = "day03"
path = "day03/main.rs"

[[bin]]
name = "day04"
path = "day04/main.rs"

[[bin]]
name = "day05"
path = "day05/main.rs"

[[bin]]
name = "day06"
path = "day06/main.rs"

[[bin]]
name = "day07"
path = "day07/main.rs"

[[bin]]
name = "day08"
path = "day08/main.rs"

[[bin]]
name = "day09"
path = "day09/main.rs"

[[bin]]
name = "day10"
path = "day10/main.rs"

[[bin]]
name = "day11"
path = "day11/main.rs"
